// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component sanity matches default snapshot 1`] = `
.c0 {
  color: #3F3D4B;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  text-align: left;
  color: #3F3D4B;
}

<div
  class="c0 c1"
  color="copyColor"
  font-family="sansSerif"
  font-size="2"
  font-weight="2"
/>
`;

exports[`Text component sanity matches themed snapshot 1`] = `
.c1 {
  color: #3F3D4B;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  text-align: left;
  color: #3F3D4B;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
    color="copyColor"
    font-family="sansSerif"
    font-size="2"
    font-weight="2"
  />
</div>
`;
